# vpic-kokkos

./: CMakeLists.txt
.github/workflows/: main.yml
arch/: Cori_GPU  Perlmutter_GPU
docs/source/: comp.rst  dev.rst  hdf5.rst  index.rst  intro.rst  vis.rst
sample/: harrisHDF5
src/grid/: grid.h
src/sf_interface/: hydro_array.cc
src/vpic/: advance.cc  dump.cc  dump.h  dump_strategy.cc  dump_strategy.h  dumpmacros.h  hdf5_header_info.cc  hdf5_header_info.h  initialize.cc  vpic.cc  vpic.h
test/integrated/: CMakeLists.txt
test/integrated/hdf5_fields/: CMakeLists.txt  hdf5_fields.deck  readback.py
test/integrated/hdf5_hydro/: CMakeLists.txt  binary_hydro.deck  hdf5_hydro.deck  readback.py
test/integrated/to_completion/: reconnection_test.deck
